# whisperr-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/whisperr/: __init__.py  client.py  django.py  errors.py  transport.py
tests/: test_behavior_conformance.py  test_client.py  test_conformance.py
